# IDevOpsInfra

./: README.md  pyproject.toml
.github/workflows/: blank.yml
src/devopsproj/: main.py
src/idevopsinfra/: __init__.py
src/idevopsinfra/web/: main.py
tests/: test_main.py  test_some.py
