[tool.poetry]
name = "idevopsinfra"
version = "0.1.0"
description = ""
authors = ["Leo Chashnikov <rayanral@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {version = ">=5.1", extras = ["toml"]}
pytest-cov = ">=2.10.0"
mypy = "0.*"
codecov = ">=2.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
